# buildcost

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: advanced.py  basic.py  estimate_residential.py
src/: __main__.py  core.py  health.py  utils.py
src/buildcost/: __init__.py  cli.py  models.py  report.py
src/buildcost/analyzer/: __init__.py  breakdown.py  comparator.py  contingency.py
src/buildcost/estimator/: calculator.py  labor.py  materials.py
tests/: test_analyzer.py  test_benchmark.py  test_calculator.py  test_cli.py  test_core.py  test_integration.py  test_labor.py  test_materials.py  test_models.py  test_residential.py
